--- a/crates/coordinator_zomes/profiles/Cargo.toml
+++ b/crates/coordinator_zomes/profiles/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 edition = "2021"
-name = "profiles"
+name = "hc_zome_profiles_coordinator"
 version = "0.0.1"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
-name = "profiles"
+name = "hc_zome_profiles_coordinator"
 
 [dependencies]
-profiles = {git = "https://github.com/holochain-open-dev/profiles", rev = "for-hdk-v0.0.152", package = "hc_zome_profiles_coordinator"}
+hc_zome_profiles_integrity = { path = "../../integrity_zomes/profiles_integrity" }
+
+hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", rev = "for-hdk-v0.0.152", package = "hc_zome_profiles_coordinator"}
