--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "npm run build:happ && npm t -w tests",
     "start:happ": "concurrently \"RUST_LOG=warn echo \"pass\" | hc s --piped generate ./workdir/cursors.happ --run=$HC_PORT -a cursors network mdns\" \"npm run playground\"",
     "package": "npm run build:happ && npm run package -w ui && hc web-app pack workdir",
-    "build:happ": "npm run build:dnas && hc app pack ./workdir/happ",
-    "build:dnas": "npm run build:zomes && hc dna pack ./workdir/dna",
+    "build:happ": "npm run build:dnas && hc app pack ./workdir/happ/",
+    "build:dnas": "npm run build:zomes && hc dna pack ./workdir/dna/",
     "build:zomes": "CARGO_TARGET_DIR=target cargo build --release --target wasm32-unknown-unknown",
     "playground": "run-singleton \"holochain-playground\""
   },
