--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@holochain/client": "^0.8.0",
+    "@holochain-open-dev/cell-client": "^0.7.3",
+    "@holochain-open-dev/profiles": "^0.5.3",
     "@lit-labs/context": "^0.1.2",
+    "@open-wc/scoped-elements": "^2.1.3",
     "@material/mwc-circular-progress": "^0.25.3",
     "@msgpack/msgpack": "^2.7.2",
     "lit": "^2.0.2",
